Text no longer overlaps on item subtitles

--- a/scripts/css/item.css
+++ b/scripts/css/item.css
@@ -1,5 +1,5 @@
 .item									{ cursor:pointer; display:inline-block; float:left; width:100%; height:100%; margin:10px;  position:relative; }
-.item .subtitle        					{ height:50px; width:100%; text-align:center; color:#696969; padding-top:10px; display:block; position:relative; }
+.item .subtitle        					{ height:50px; width:100%; white-space:normal; text-align:center; text-align:center; color:#696969; padding-top:10px; display:block; position:relative; }
 
 .item .thumbnail        				{ position:relative; overflow:hidden; width:100%; height:100px; box-shadow:0px 2px 4px rgba(0,0,0,0.3); -webkit-box-shadow:0px 2px 4px rgba(0,0,0,0.3);  -o-box-shadow:0px 2px 4px rgba(0,0,0,0.3);  -moz-box-shadow:0px 2px 4px rgba(0,0,0,0.3); -ms-box-shadow:0px 2px 4px rgba(0,0,0,0.3); border-radius:10px; -webkit-border-radius:10px; -moz-border-radius:10px; -ms-border-radius:10px; -o-border-radius:10px; behavior: url('/lib/pie/PIE.htc'); }
 .item .thumbnail .overlay				{ cursor:pointer; width:100%; background:url('/img/dim.png'); height:200px; display:none; position:absolute; }
